--- a/Exportação/Imc_api_pandas.ipynb
+++ b/Exportação/Imc_api_pandas.ipynb
@@ -1,59 +1,43 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "import requests\n",
-        "import pandas as pd"
-      ],
+      "execution_count": 1,
       "metadata": {
         "id": "-hgAcHjYtOYg"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import requests\n",
+        "import pandas as pd"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "V10agfRBs52B"
       },
       "outputs": [],
       "source": [
-        "r = requests.get('https://similarpowerlessnetwork.andrevinicius2.repl.co/imc/André/M/87/1.75/eng')\n",
+        "r = requests.get('https://api-IMC.andrevinicius2.repl.co/imc/André/M/87/1.75/eng')\n",
         "dados = r.json()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "expCsv = pd.DataFrame(dados, index=[0])"
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "YQRbdeWwtdoC"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "expCsv = pd.DataFrame(dados, index=[0])"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(expCsv)"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -61,45 +45,45 @@
         "id": "1_f9ZHWluLia",
         "outputId": "7d867f3a-f22a-49aa-e720-14b20300d15f"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "  Student Gender  Weight  Height    BIC    Category\n",
             "0   André      M      87    1.75  28.41  Overweight\n"
           ]
         }
+      ],
+      "source": [
+        "print(expCsv)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "expCsv.to_csv('Imc.csv', index=None)"
-      ],
+      "execution_count": 5,
       "metadata": {
         "id": "xiA10NMeucxU"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "expCsv.to_csv('Imc.csv', index=None)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "expCsv2 = pd.read_csv('Imc.csv', index_col=0)"
-      ],
+      "execution_count": 6,
       "metadata": {
         "id": "S2ECZCKsu2JH"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "expCsv2 = pd.read_csv('Imc.csv', index_col=0)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "expCsv2"
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -108,21 +92,11 @@
         "id": "FodALZ2NvIMp",
         "outputId": "cedf762e-38f0-4db8-fdf8-c6d1a5a810d3"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "        Gender  Weight  Height    BIC    Category\n",
-              "Student                                          \n",
-              "André        M      87    1.75  28.41  Overweight"
-            ],
             "text/html": [
-              "\n",
-              "  <div id=\"df-c6469f59-b536-4c91-9205-889c86bd2d1c\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
+              "<div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
               "        vertical-align: middle;\n",
@@ -166,89 +140,51 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c6469f59-b536-4c91-9205-889c86bd2d1c')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-c6469f59-b536-4c91-9205-889c86bd2d1c button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c6469f59-b536-4c91-9205-889c86bd2d1c');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
+              "</div>"
+            ],
+            "text/plain": [
+              "        Gender  Weight  Height    BIC    Category\n",
+              "Student                                          \n",
+              "André        M      87    1.75  28.41  Overweight"
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 30
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "expCsv2"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.2"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
